--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cypress": "^9.7.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^7.3.0"
+    "@faker-js/faker": "^7.3.0",
+    "mysql": "^2.18.1"
   }
 }
